--- a/.gitmodules
+++ b/.gitmodules
@@ -16,17 +16,20 @@
 # *******************************************************************************/
 
 [submodule "demo/build/xup_vitis_network_example"]
-	path = test/hardware/xup_vitis_network_example
+	path = test/refdesigns/xup_vitis_network_example
 	url = https://github.com/Xilinx/xup_vitis_network_example.git
 [submodule "demo/build/Vitis_with_100Gbps_TCP-IP"]
-	path = test/hardware/Vitis_with_100Gbps_TCP-IP
+	path = test/refdesigns/Vitis_with_100Gbps_TCP-IP
 	url = https://github.com/fpgasystems/Vitis_with_100Gbps_TCP-IP.git
 [submodule "hlslib"]
 	path = hlslib
 	url = https://github.com/quetric/hlslib.git
 [submodule "test/hardware/HiveNet"]
-	path = test/hardware/HiveNet
+	path = test/refdesigns/HiveNet
 	url = https://github.com/quetric/AlveoLink.git
 [submodule "test/model/emulator/hls_sim_headers"]
 	path = test/model/emulator/hls_sim_headers
 	url = https://github.com/quetric/hls_sim_headers.git
+[submodule "test/refdesigns/Coyote"]
+	path = test/refdesigns/Coyote
+	url = https://github.com/fpgasystems/Coyote.git
