--- a/kernels/cclo/Makefile
+++ b/kernels/cclo/Makefile
@@ -39,6 +39,10 @@ else ifeq (u280,$(findstring u280, $(PLATFORM)))
 	FPGAPART=xcu280-fsvh2892-2L-e
 else ifeq (u55c,$(findstring u55c, $(PLATFORM)))
 	FPGAPART=xcu55c-fsvh2892-2L-e
+else ifeq (u200,$(findstring u200, $(PLATFORM)))
+	FPGAPART=xcu200-fsgd2104-2-e
+else ifeq (u50,$(findstring u200, $(PLATFORM)))
+	FPGAPART=xcu200-fsgd2104-2-e
 else
 	$(error Unsupported PLATFORM)
 endif
