WIP RDMA checkpoint

--- a/kernels/cclo/hls/eth_intf/Makefile
+++ b/kernels/cclo/hls/eth_intf/Makefile
@@ -23,10 +23,15 @@ TCP_TXHANDLER_IP=build_tcp_txHandler//sol1/impl/ip/xilinx_com_hls_tcp_txHandler_
 TCP_RXHANDLER_IP=build_tcp_rxHandler//sol1/impl/ip/xilinx_com_hls_tcp_rxHandler_1_0.zip
 UDP_PACKETIZER_IP=build_udp_packetizer/sol1/impl/ip/xilinx_com_hls_udp_packetizer_1_0.zip
 UDP_DEPACKETIZER_IP=build_udp_depacketizer/sol1/impl/ip/xilinx_com_hls_udp_depacketizer_1_0.zip
+RDMA_RQ_HANDLER_IP=build_rdma_rq_handler/sol1/impl/ip/xilinx_com_hls_rdma_rq_handler_1_0.zip
+RDMA_SQ_HANDLER_IP=build_rdma_sq_handler/sol1/impl/ip/xilinx_com_hls_rdma_sq_handler_1_0.zip
+RDMA_PACKETIZER_IP=build_rdma_packetizer/sol1/impl/ip/xilinx_com_hls_rdma_packetizer_1_0.zip
+RDMA_DEPACKETIZER_IP=build_rdma_depacketizer/sol1/impl/ip/xilinx_com_hls_rdma_depacketizer_1_0.zip
+RDMA_METATABLE_IP=build_rdma_metatable/sol1/impl/ip/xilinx_com_hls_rdma_metatable_1_0.zip
 
 TARGET=ip
 
-all: $(TCP_SESSIONHANDLER_IP) $(TCP_PACKETIZER_IP) $(TCP_TXHANDLER_IP) $(TCP_RXHANDLER_IP) $(TCP_DEPACKETIZER_IP) $(UDP_PACKETIZER_IP) $(UDP_DEPACKETIZER_IP)
+all: $(TCP_SESSIONHANDLER_IP) $(TCP_PACKETIZER_IP) $(TCP_TXHANDLER_IP) $(TCP_RXHANDLER_IP) $(TCP_DEPACKETIZER_IP) $(UDP_PACKETIZER_IP) $(UDP_DEPACKETIZER_IP) $(RDMA_RQ_HANDLER_IP) $(RDMA_SQ_HANDLER_IP) $(RDMA_PACKETIZER_IP) $(RDMA_DEPACKETIZER_IP) $(RDMA_METATABLE_IP)
 
 tcp_packetizer: $(TCP_PACKETIZER_IP)
 tcp_depacketizer: $(TCP_DEPACKETIZER_IP)
@@ -35,6 +40,11 @@ txHandler: $(TCP_TXHANDLER_IP)
 rxHandler: $(TCP_RXHANDLER_IP)
 udp_depacketizer: $(UDP_DEPACKETIZER_IP)
 udp_packetizer: $(UDP_PACKETIZER_IP)
+rdma_rq_handler: $(RDMA_RQ_HANDLER_IP)
+rdma_sq_handler: $(RDMA_SQ_HANDLER_IP)
+rdma_packetizer: $(RDMA_PACKETIZER_IP)
+rdma_depacketizer: $(RDMA_DEPACKETIZER_IP)
+rdma_metatable: $(RDMA_METATABLE_IP)
 
 $(TCP_SESSIONHANDLER_IP): ../build.tcl tcp_sessionHandler.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE) tcp_sessionHandler
@@ -56,3 +66,18 @@ $(UDP_PACKETIZER_IP): ../build.tcl udp_packetizer.cpp
 
 $(UDP_DEPACKETIZER_IP): ../build.tcl udp_depacketizer.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE) udp_depacketizer
+
+$(RDMA_RQ_HANDLER_IP): ../build.tcl rdma_rq_handler.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE) rdma_rq_handler
+
+$(RDMA_SQ_HANDLER_IP): ../build.tcl rdma_sq_handler.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE) rdma_sq_handler
+
+$(RDMA_PACKETIZER_IP): ../build.tcl rdma_packetizer.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE) rdma_packetizer
+
+$(RDMA_DEPACKETIZER_IP): ../build.tcl rdma_depacketizer.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE) rdma_depacketizer
+
+$(RDMA_METATABLE_IP): ../build.tcl rdma_metatable.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE) rdma_metatable
