Removed TCP connection related ports, IP, and code

--- a/kernels/cclo/hls/eth_intf/Makefile
+++ b/kernels/cclo/hls/eth_intf/Makefile
@@ -18,7 +18,6 @@
 DEVICE=xcu280-fsvh2892-2L-e
 TCP_PACKETIZER_IP=build_tcp_packetizer/sol1/impl/ip/xilinx_com_hls_tcp_packetizer_1_0.zip
 TCP_DEPACKETIZER_IP=build_tcp_depacketizer/sol1/impl/ip/xilinx_com_hls_tcp_depacketizer_1_0.zip
-TCP_SESSIONHANDLER_IP=build_tcp_sessionHandler//sol1/impl/ip/xilinx_com_hls_tcp_sessionHandler_1_0.zip
 TCP_TXHANDLER_IP=build_tcp_txHandler//sol1/impl/ip/xilinx_com_hls_tcp_txHandler_1_0.zip
 TCP_RXHANDLER_IP=build_tcp_rxHandler//sol1/impl/ip/xilinx_com_hls_tcp_rxHandler_1_0.zip
 UDP_PACKETIZER_IP=build_udp_packetizer/sol1/impl/ip/xilinx_com_hls_udp_packetizer_1_0.zip
@@ -31,11 +30,10 @@ RDMA_METATABLE_IP=build_rdma_metatable/sol1/impl/ip/xilinx_com_hls_rdma_metatabl
 
 TARGET=ip
 
-all: $(TCP_SESSIONHANDLER_IP) $(TCP_PACKETIZER_IP) $(TCP_TXHANDLER_IP) $(TCP_RXHANDLER_IP) $(TCP_DEPACKETIZER_IP) $(UDP_PACKETIZER_IP) $(UDP_DEPACKETIZER_IP) $(RDMA_RQ_HANDLER_IP) $(RDMA_SQ_HANDLER_IP) $(RDMA_PACKETIZER_IP) $(RDMA_DEPACKETIZER_IP) $(RDMA_METATABLE_IP)
+all: $(TCP_PACKETIZER_IP) $(TCP_TXHANDLER_IP) $(TCP_RXHANDLER_IP) $(TCP_DEPACKETIZER_IP) $(UDP_PACKETIZER_IP) $(UDP_DEPACKETIZER_IP) $(RDMA_RQ_HANDLER_IP) $(RDMA_SQ_HANDLER_IP) $(RDMA_PACKETIZER_IP) $(RDMA_DEPACKETIZER_IP) $(RDMA_METATABLE_IP)
 
 tcp_packetizer: $(TCP_PACKETIZER_IP)
 tcp_depacketizer: $(TCP_DEPACKETIZER_IP)
-sessionHandler: $(TCP_SESSIONHANDLER_IP)
 txHandler: $(TCP_TXHANDLER_IP)
 rxHandler: $(TCP_RXHANDLER_IP)
 udp_depacketizer: $(UDP_DEPACKETIZER_IP)
@@ -45,9 +43,6 @@ rdma_sq_handler: $(RDMA_SQ_HANDLER_IP)
 rdma_packetizer: $(RDMA_PACKETIZER_IP)
 rdma_depacketizer: $(RDMA_DEPACKETIZER_IP)
 rdma_metatable: $(RDMA_METATABLE_IP)
-
-$(TCP_SESSIONHANDLER_IP): ../build.tcl tcp_sessionHandler.cpp
-	vitis_hls $< -tclargs $(TARGET) $(DEVICE) tcp_sessionHandler
 
 $(TCP_PACKETIZER_IP): ../build.tcl tcp_packetizer.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE) tcp_packetizer
