validated eager protocol, all collectives work except all-reduce

--- a/test/refdesigns/Makefile
+++ b/test/refdesigns/Makefile
@@ -182,7 +182,7 @@ else ifeq (coyote_tcp, $(MODE))
 	OUTPUT_PRODUCT = $(CYT_BIT)
 else ifeq (coyote_rdma, $(MODE))
 	OTHER_XO = coyote_shell
-	COYOTE_CONFIG = -DFDEV_NAME=$(BOARD) -DEN_MEM=1 -DEN_STRM=1 -DEN_BPSS=1 -DEN_RDMA_0=1 -DEN_RPC=1 -DN_STRM_AXI=3 -DN_CARD_AXI=3 -DEN_HLS=0 -DACLK_F=250
+	COYOTE_CONFIG = -DFDEV_NAME=$(BOARD) -DEN_MEM=1 -DEN_STRM=1 -DEN_BPSS=1 -DEN_RDMA_0=1 -DEN_RPC=1 -DN_STRM_AXI=3 -DN_CARD_AXI=3 -DEN_HLS=0 -DACLK_F=250 -DTLBL_A=12
 	CCLO_STACK_TYPE = RDMA
 	OUTPUT_PRODUCT = $(CYT_BIT)
 else
