--- a/test/model/simulator/CMakeLists.txt
+++ b/test/model/simulator/CMakeLists.txt
@@ -58,12 +58,22 @@ if (NOT EXISTS ${XSIM_COMPILE_FOLDER})
 endif ()
 
 set(SYMLINKS xsim.dir
-             ccl_offload_bd_axi_bram_ctrl_0_bram_0.mem ccl_offload_bd_dlmb_bram_if_cntlr_bram_0.mem
-             dma_mover_instruction_decode_arcfg_6_RAM_AUTO_1R1W.dat rxbuf_session_rxbuf_session_command_mem_active_RAM_AUTO_1R1W.dat
-             rxbuf_session_rxbuf_session_command_mem_index_RAM_AUTO_1R1W.dat tcp_depacketizer_target_strm_V_RAM_AUTO_1R1W.dat
-             tcp_depacketizer_remaining_RAM_AUTO_1R1W.dat udp_depacketizer_remaining_RAM_AUTO_1R1W.dat
-             udp_depacketizer_target_strm_V_RAM_AUTO_1R1W.dat rxbuf_session_rxbuf_session_command_mem_header_dst_V_RAM_AUTO_1R1W.dat
-             rxbuf_session_rxbuf_session_command_mem_address_V_RAM_AUTO_1R1W.dat)
+             ccl_offload_bd_axi_bram_ctrl_0_bram_0.mem 
+             ccl_offload_bd_dlmb_bram_if_cntlr_bram_0.mem
+             dma_mover_instruction_decode_arcfg_6_RAM_AUTO_1R1W.dat 
+             rxbuf_session_rxbuf_session_command_mem_active_RAM_AUTO_1R1W.dat
+             rxbuf_session_rxbuf_session_command_mem_index_RAM_AUTO_1R1W.dat 
+             tcp_depacketizer_target_strm_V_RAM_AUTO_1R1W.dat
+             tcp_depacketizer_remaining_RAM_AUTO_1R1W.dat 
+             udp_depacketizer_remaining_RAM_AUTO_1R1W.dat
+             udp_depacketizer_target_strm_V_RAM_AUTO_1R1W.dat 
+             rxbuf_session_rxbuf_session_command_mem_header_dst_V_RAM_AUTO_1R1W.dat
+             rxbuf_session_rxbuf_session_command_mem_address_V_RAM_AUTO_1R1W.dat
+             rxbuf_session_rxbuf_session_command_mem_buf_index_RAM_AUTO_1R1W.dat
+             rxbuf_session_rxbuf_session_command_mem_mem_index_V_RAM_AUTO_1R1W.dat
+             sc_xtlm_ccl_offload_bd_smartconnect_0_0.mem
+             rdma_depacketizer_remaining_RAM_AUTO_1R1W.dat
+             rdma_depacketizer_target_strm_V_RAM_AUTO_1R1W.dat)
 
 foreach(SYMLINK ${SYMLINKS})
   add_custom_target(${SYMLINK} ALL
