Create static library instead of object files

--- a/driver/utils/accl_network_utils/CMakeLists.txt
+++ b/driver/utils/accl_network_utils/CMakeLists.txt
@@ -30,7 +30,7 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../xrt ${CMAKE_CURRENT_BINARY_DIR}
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../test/hardware/HiveNet/network/roce_v2/xrt_utils ${CMAKE_CURRENT_BINARY_DIR}/network_roce_v2)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../test/hardware/xup_vitis_network_example/xrt_host_api ${CMAKE_CURRENT_BINARY_DIR}/vnx)
 
-add_library(accl_network_utils OBJECT src/accl_network_utils.cpp)
+add_library(accl_network_utils STATIC src/accl_network_utils.cpp)
 
 target_include_directories(accl_network_utils PUBLIC ${ACCL_NETWORK_UTILS_INCLUDE_PATH})
 
