--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -22,14 +22,12 @@ version: 2
 
 build:
    os: ubuntu-20.04
+   tools:
+      python: "3.8"
 
 sphinx:
    configuration: docs/conf.py
 
 python:
-   version: 3.8
    install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
