--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,6 +24,8 @@ build:
    os: ubuntu-20.04
    tools:
       python: "3.8"
+   apt_packages:
+      - graphviz
 
 sphinx:
    configuration: docs/conf.py
