--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,7 +5,7 @@ on:
       - dev
 
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-20.04
     timeout-minutes: 20
     steps:
@@ -14,45 +14,71 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Restore Cached XRT
-        id: cache-xrt-restore
-        uses: actions/cache/restore@v3
-        with:
-          path: xrt.deb
-          key: ${{ runner.os }}-xrt
-
-      - name: Download XRT
-        if: steps.cache-xrt-restore.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get update
-          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y --no-install-recommends wget
-          wget --no-check-certificate https://www.xilinx.com/bin/public/openDownload?filename=xrt_202220.2.14.354_20.04-amd64-xrt.deb -O xrt.deb
-
-      - name: Save XRT
-        id: cache-xrt-save
-        if: steps.cache-xrt-restore.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v3
-        with:
-          path: xrt.deb
-          key: ${{ steps.cache-xrt-restore.outputs.cache-primary-key }}
-        
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y --no-install-recommends build-essential cmake libjsoncpp-dev libzmqpp-dev libtclap-dev libopenmpi-dev libboost-all-dev
-          sudo dpkg -i xrt.deb || true
-          sudo apt --fix-broken install -y --no-install-recommends 
+      - name: Get Build Dependencies
+        id: get-build-dependencies
+        uses: ./.github/actions/setup-accl-build-env
 
       - name: Build Emulator
         run: |
-          cd ${{ github.workspace }}/test/model/emulator && cmake . && make
+          cd ${{ github.workspace }}/test/model/emulator && cmake . && make -j2
+
+      - name: Save Emulator
+        id: cache-emulator-save
+        uses: actions/cache/save@v3
+        with:
+          path: ${{ github.workspace }}/test/model/emulator/cclo_emu
+          key: ${{ runner.os }}-emulator-${{ github.run_id }}
 
       - name: Build Test
         run: |
           source /opt/xilinx/xrt/setup.sh
-          cd ${{ github.workspace }}/test/host/xrt && cmake . && make
+          cd ${{ github.workspace }}/test/host/xrt && cmake . && make -j2
+
+      - name: Save Emulator
+        id: cache-test-save
+        uses: actions/cache/save@v3
+        with:
+          path: ${{ github.workspace }}/test/host/xrt/bin/test
+          key: ${{ runner.os }}-test-${{ github.run_id }}
+
+  test_dma:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+    needs: ["build"]
+    steps:
+      - name: Get Run Dependencies
+        id: get-run-dependencies
+        uses: ./.github/actions/setup-accl-run-env          
 
       - name: Run Test
         run: |
           source /opt/xilinx/xrt/setup.sh
-          cd ${{ github.workspace }}/test/host/xrt && mpirun -np 2 bin/test --startemu
+          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 1 --allow-run-as-root test --startemu --udp --gtest_filter=-*perf_counter*
+
+  test_udp:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 20
+    needs: ["build"]
+    steps:
+      - name: Get Run Dependencies
+        id: get-run-dependencies
+        uses: ./.github/actions/setup-accl-run-env          
+
+      - name: Run Test
+        run: |
+          source /opt/xilinx/xrt/setup.sh
+          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 2 --allow-run-as-root test --startemu --udp
+
+  test_tcp:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 20
+    needs: ["build"]
+    steps:
+      - name: Get Run Dependencies
+        id: get-run-dependencies
+        uses: ./.github/actions/setup-accl-run-env          
+
+      - name: Run Test
+        run: |
+          source /opt/xilinx/xrt/setup.sh
+          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 2 --allow-run-as-root test --startemu --tcp
