--- a/.github/actions/setup-accl-run-env/action.yml
+++ b/.github/actions/setup-accl-run-env/action.yml
@@ -21,7 +21,7 @@ runs:
       id: cache-test-restore
       uses: actions/cache/restore@v3
       with:
-        path: test
+        path: accl_test
         key: ${{ runner.os }}-test-${{ github.run_id }}
 
     - name: Install Run Dependencies
