--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,24 +22,33 @@ jobs:
         run: |
           cd ${{ github.workspace }}/test/model/emulator && cmake . && make -j2
 
-      - name: Save Emulator
-        id: cache-emulator-save
-        uses: actions/cache/save@v3
-        with:
-          path: ${{ github.workspace }}/test/model/emulator/cclo_emu
-          key: ${{ runner.os }}-emulator-${{ github.run_id }}
-
       - name: Build Test
         run: |
           source /opt/xilinx/xrt/setup.sh
           cd ${{ github.workspace }}/test/host/xrt && cmake . && make -j2
 
-      - name: Save Emulator
-        id: cache-test-save
-        uses: actions/cache/save@v3
+      - name: Package Deb
+        run: |
+          mkdir accl && mkdir accl/DEBIAN
+          mkdir -p accl/usr/local/bin
+          mkdir -p accl/usr/lib
+          cp ${{ github.workspace }}/test/model/emulator/cclo_emu accl/usr/local/bin/
+          cp ${{ github.workspace }}/test/host/xrt/bin/test accl/usr/local/bin/accl_test
+          cp ${{ github.workspace }}/test/host/xrt/lib/libaccl.so accl/usr/lib/
+          echo "Package: accl" > accl/DEBIAN/control
+          echo "Version: 0.1" >> accl/DEBIAN/control
+          echo "Maintainer: Lucian Petrica" >> accl/DEBIAN/control
+          echo "Architecture: all" >> accl/DEBIAN/control
+          echo "Description: Testing package for ACCL" >> accl/DEBIAN/control
+          echo "Depends: libjsoncpp1, libzmqpp4, openmpi-bin, xrt" >> accl/DEBIAN/control
+          dpkg-deb --build accl
+
+      - name: Save Testing Artifacts
+        id: save-test-artifact
+        uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/test/host/xrt/bin/test
-          key: ${{ runner.os }}-test-${{ github.run_id }}
+          name: testing-artifacts
+          path: accl.deb
 
   test_dma:
     runs-on: ubuntu-20.04
@@ -56,7 +65,7 @@ jobs:
       - name: Run Test
         run: |
           source /opt/xilinx/xrt/setup.sh
-          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 1 --allow-run-as-root ./test --startemu --udp --gtest_filter=-*perf_counter*
+          ACCL_EMULATOR_PATH=/usr/local/bin/cclo_emu mpirun -np 1 --allow-run-as-root accl_test --startemu --udp --gtest_filter=-*perf_counter*
 
   test_udp:
     runs-on: ubuntu-20.04
@@ -73,7 +82,7 @@ jobs:
       - name: Run Test
         run: |
           source /opt/xilinx/xrt/setup.sh
-          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 2 --allow-run-as-root ./test --startemu --udp
+          ACCL_EMULATOR_PATH=/usr/local/bin/cclo_emu mpirun -np 2 --allow-run-as-root accl_test --startemu --udp
 
   test_tcp:
     runs-on: ubuntu-20.04
@@ -90,4 +99,4 @@ jobs:
       - name: Run Test
         run: |
           source /opt/xilinx/xrt/setup.sh
-          ACCL_EMULATOR_PATH=./cclo_emu mpirun -np 2 --allow-run-as-root ./test --startemu --tcp
+          ACCL_EMULATOR_PATH=/usr/local/bin/cclo_emu mpirun -np 2 --allow-run-as-root accl_test --startemu --tcp
